# SFML

base-project/: CMakeLists.txt
fps-test/: CMakeLists.txt
fps-test/src/: TextBox.cpp  TextBox.hpp  main.cpp
tetris-like/: CMakeLists.txt
tetris-like/src/: Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Shapes.cpp  Shapes.hpp  consts.hpp  main.cpp
